--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -33,13 +33,35 @@ En la definicion del formato.
 === Un TRIAL es una lista con ===
  * nivel (_numero entero_):
    * El nivel de dificultad del trial.
- * agrupacion (_numero de 0 a 7 inclusive_):
+ * agrupacion (_numero entero de 0 a 7 inclusive_):
    * 0 significa que no hay agrupamiento.
    * De no ser 0, el valor es el indice (contando desde 1) del elemento de la FICHA por el que agrupamos. ver la descripcion de FICHA para ver la correspondencia indice<>elemento.
  * fichas (_lista de FICHA_):
    * La lista de FICHA a usar para el trial.
 
-=== ...y para cada FICHA tenemos: ===
+=== Una FICHA es una lista con ===
+ * marco (_numero entero de 1 a 12 inclusive_)
+   * Es el marco a usar para la ficha, estos son los valores:
+     # Cuadrado con la esquina sup.der. redondeada _../../res/svg/marcos/casiuncuadrado.svg_
+     # Circulo _../../res/svg/marcos/circulo.svg_
+     # Nubecita _../../res/svg/marcos/circulosss.svg_
+     # Cuadrado redondeado en todas las esquinas _../../res/svg/marcos/cuadrado.svg_
+     # Cuadrado con las esquinas sup.der. e inf.izq. redondeadas _../../res/svg/marcos/doble gota.svg_
+		public static var marco_5:Class;
+		[Embed(source="../../res/svg/marcos/escudo.svg")]
+		public static var marco_6:Class;
+		[Embed(source="../../res/svg/marcos/escudo2.svg")]
+		public static var marco_7:Class;
+		[Embed(source="../../res/svg/marcos/estrella.svg")]
+		public static var marco_8:Class;
+		[Embed(source="../../res/svg/marcos/gota.svg")]
+		public static var marco_9:Class;
+		[Embed(source="../../res/svg/marcos/poligono.svg")]
+		public static var marco_10:Class;
+		[Embed(source="../../res/svg/marcos/raro1.svg")]
+		public static var marco_11:Class;
+		[Embed(source="../../res/svg/marcos/raro2.svg")]
+		public static var marco_12:Class;
 * las distintas partecitas que la componen.
 
 (Aca va una notacion mas corta)
