--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -14,7 +14,7 @@ En la definicion del formato.
 
 = Memoria =
 
-== Formato del GAME_FILE ==
+== Formato del GAME_FILE de memoria ==
 
 === En el GAME_FILE de un juego de memoria especificamos: ===
  * nivel_inicial (_numero entero_):
@@ -36,108 +36,120 @@ En la definicion del formato.
  * agrupacion (_numero entero de 0 a 7 inclusive_):
    * 0 significa que no hay agrupamiento.
    * De no ser 0, el valor es el indice (contando desde 1) del elemento de la FICHA por el que agrupamos. ver la descripcion de FICHA para ver la correspondencia indice<>elemento.
- * fichas (_lista de FICHA_):
-   * La lista de FICHA a usar para el trial.
+ * fichas (_lista de CARD_):
+   * La lista de CARD a usar para el trial.
 
-=== Una FICHA es una lista con ===
+=== Un CARD, o ficha es una lista con... ===
  * marco (_numero entero de 1 a 12 inclusive_)
    * Siempre debe haber un marco
    * Es el marco a usar para la ficha, estos son los valores:
-     # Cuadrado con la esquina sup.der. redondeada _../../res/svg/marcos/casiuncuadrado.svg_
-     # Circulo _../../res/svg/marcos/circulo.svg_
-     # Nubecita _../../res/svg/marcos/circulosss.svg_
-     # Cuadrado redondeado en todas las esquinas _../../res/svg/marcos/cuadrado.svg_
-     # Cuadrado con las esquinas sup.der. e inf.izq. redondeadas _../../res/svg/marcos/doble gota.svg_
-     # Cuadrado con las esquinas inf.der. e inf.izq. redondeadas _../../res/svg/marcos/escudo.svg_
-     # Cuadrado con las esquinas sup.der. y sup.izq redondeadas _../../res/svg/marcos/escudo2.svg_
-     # Estrella de 20 puntas _../../res/svg/marcos/estrella.svg_
-     # Cuadrado con las esquinas inf.izq, sup.der. y sup.izq. redondeadas. _../../res/svg/marcos/gota.svg_
-     # Estrella de 8 puntas _../../res/svg/marcos/poligono.svg_
-     # Estrella de 8 puntas en la mitad superior, hexagono en la inferior _../../res/svg/marcos/raro1.svg_
-     # Estrella de 8 puntas en la mitad superior, circulo en la inferior _../../res/svg/marcos/raro2.svg_
+     # Cuadrado con la esquina sup.der. redondeada _/res/svg/marcos/casiuncuadrado.svg_
+     # Circulo _/res/svg/marcos/circulo.svg_
+     # Nubecita _/res/svg/marcos/circulosss.svg_
+     # Cuadrado redondeado en todas las esquinas _/res/svg/marcos/cuadrado.svg_
+     # Cuadrado con las esquinas sup.der. e inf.izq. redondeadas _/res/svg/marcos/doble gota.svg_
+     # Cuadrado con las esquinas inf.der. e inf.izq. redondeadas _/res/svg/marcos/escudo.svg_
+     # Cuadrado con las esquinas sup.der. y sup.izq redondeadas _/res/svg/marcos/escudo2.svg_
+     # Estrella de 20 puntas _/res/svg/marcos/estrella.svg_
+     # Cuadrado con las esquinas inf.izq, sup.der. y sup.izq. redondeadas. _/res/svg/marcos/gota.svg_
+     # Estrella de 8 puntas _/res/svg/marcos/poligono.svg_
+     # Estrella de 8 puntas en la mitad superior, hexagono en la inferior _/res/svg/marcos/raro1.svg_
+     # Estrella de 8 puntas en la mitad superior, circulo en la inferior _/res/svg/marcos/raro2.svg_
 
  * fondo (_numero entero de 1 a 13 inclusive_):
    * siempre debe haber un fondo
    * Es el color o trama de fondo a usar en la ficha
-     # ../../res/svg/fondos/playa.svg
-     # ../../res/svg/fondos/azul.svg
-     # ../../res/svg/fondos/celeste.svg
-     # ../../res/svg/fondos/gris.svg
-     # ../../res/svg/fondos/marron.svg
-     # ../../res/svg/fondos/naranja.svg
-     # ../../res/svg/fondos/rojo.svg
-     # ../../res/svg/fondos/rosa.svg
-     # ../../res/svg/fondos/verde.svg
-     # ../../res/svg/fondos/violeta.svg
-     # ../../res/svg/fondos/amarillo.svg
-     # ../../res/svg/fondos/fucsia.svg
-     # ../../res/svg/fondos/marino.svg (celeste)
+     # /res/svg/fondos/playa.svg
+     # /res/svg/fondos/azul.svg
+     # /res/svg/fondos/celeste.svg
+     # /res/svg/fondos/gris.svg
+     # /res/svg/fondos/marron.svg
+     # /res/svg/fondos/naranja.svg
+     # /res/svg/fondos/rojo.svg
+     # /res/svg/fondos/rosa.svg
+     # /res/svg/fondos/verde.svg
+     # /res/svg/fondos/violeta.svg
+     # /res/svg/fondos/amarillo.svg
+     # /res/svg/fondos/fucsia.svg
+     # /res/svg/fondos/marino.svg (celeste)
 
  * sombrilla (_numero entero de 0 a 12 inclusive _)
    * 0 significa que no hay sombrilla
    * valores:
-     # violeta _../../res/svg/sombrillas/1.svg_
-     # fucsia _../../res/svg/sombrillas/2.svg_
-     # verde _../../res/svg/sombrillas/3.svg_
-     # marron _../../res/svg/sombrillas/4.svg_
-     # celeste _../../res/svg/sombrillas/5.svg_
-     # rosa _../../res/svg/sombrillas/6.svg_
-     # naranja _../../res/svg/sombrillas/7.svg_
-     # amarillo _../../res/svg/sombrillas/8.svg_
-     # rojo _../../res/svg/sombrillas/9.svg_
-     # rojo/naranja _../../res/svg/sombrillas/10.svg_
-     # gris _../../res/svg/sombrillas/11.svg_
-     # azul _../../res/svg/sombrillas/12.svg_
+     # violeta _/res/svg/sombrillas/1.svg_
+     # fucsia _/res/svg/sombrillas/2.svg_
+     # verde _/res/svg/sombrillas/3.svg_
+     # marron _/res/svg/sombrillas/4.svg_
+     # celeste _/res/svg/sombrillas/5.svg_
+     # rosa _/res/svg/sombrillas/6.svg_
+     # naranja _/res/svg/sombrillas/7.svg_
+     # amarillo _/res/svg/sombrillas/8.svg_
+     # rojo _/res/svg/sombrillas/9.svg_
+     # rojo/naranja _/res/svg/sombrillas/10.svg_
+     # gris _/res/svg/sombrillas/11.svg_
+     # azul _/res/svg/sombrillas/12.svg_
 
  * baldes (_numero entero de 0 a 2 inclusive_)
    * 0 significa que no hay baldes
    * valores:
-     # 2 baldes _../../res/svg/baldes/2.svg_
-     # 4 baldes _../../res/svg/baldes/4.svg_
+     # 2 baldes _/res/svg/baldes/2.svg_
+     # 4 baldes _/res/svg/baldes/4.svg_
 
  * estrellas (_numero entero de 0 a 10 inclusive_)
   * El valor se corresponde con la cantida de estrellas mostradas
   * valores:
-     # _../../res/svg/estrellas/1.svg_
-     # _../../res/svg/estrellas/2.svg_
-     # _../../res/svg/estrellas/3.svg_
-     # _../../res/svg/estrellas/4.svg_
-     # _../../res/svg/estrellas/5.svg_
-     # _../../res/svg/estrellas/6.svg_
-     # _../../res/svg/estrellas/7.svg_
-     # _../../res/svg/estrellas/8.svg_
-     # _../../res/svg/estrellas/9.svg_
-     # _../../res/svg/estrellas/10.svg_
+     # _/res/svg/estrellas/1.svg_
+     # _/res/svg/estrellas/2.svg_
+     # _/res/svg/estrellas/3.svg_
+     # _/res/svg/estrellas/4.svg_
+     # _/res/svg/estrellas/5.svg_
+     # _/res/svg/estrellas/6.svg_
+     # _/res/svg/estrellas/7.svg_
+     # _/res/svg/estrellas/8.svg_
+     # _/res/svg/estrellas/9.svg_
+     # _/res/svg/estrellas/10.svg_
 
  * personaje (_numero entero de 0 a 3 inclusive_)
    * 0 significa que no hay personaje
    * valores:
-     # ana parada _../../res/svg/personaje/anaparada.svg_
-     # ana sentada _../../res/svg/personaje/anareposera.svg_
-     # ono parado _../../res/svg/personaje/onoplaya.svg_
+     # ana parada _/res/svg/personaje/anaparada.svg_
+     # ana sentada _/res/svg/personaje/anareposera.svg_
+     # ono parado _/res/svg/personaje/onoplaya.svg_
 
  * lentes (_numero entero de 0 a 1 inclusive_)<- jeje, o sea, 0 o 1
-   * el archivo de los lentes es _../../res/svg/lentes/lentes.svg_
+   * el archivo de los lentes es _/res/svg/lentes/lentes.svg_
 
-== Notacion corta de un nivel de memoria ==
-JUEGO = [nivel_inicial,
-         perdidas,
-         victorias,
-         numero_de_trials,
-         [TRIAL, TRIAL,...]]
+=== Notacion corta de un nivel de memoria ===
+GAME_FILE = [nivel_inicial, perdidas, victorias, numero_de_trials, [TRIAL, TRIAL,...]]
 TRIAL = [nivel, agrupacion, [FICHA, FICHA,...]]
 FICHA = [marco, fondo, sombrilla, baldes, estrellas, personaje, lentes]
 
-Una vez guardado el log crudo, se puede parsear para generar un log que,
-tambien en formato de listas anidadas, nos muestra:
-* una lista de TRIAL_RESPONSE
-...donde cada TRIAL_RESPONSE tiene:
-* el TRIAL jugado (como vimos mas arriba)
-* el RESPONSE, o respuesta del jugador a ese trial.
-...cada RESPONSE tiene:
-* el resultado, correcto o incorrecto del trial
-* una lista de CHOICES que hizo el jugador en cada instancia
-...cada CHOICE tiene:
+== Formato del LOG_FILE de memoria ==
+Una vez guardado el log crudo, se puede parsear para generar un LOG_FILE, tambien en formato de listas anidadas. En el log simplemente unimos cada TRIAL con la respuesta correspondiente (RESPONSE). 
+ 
+=== LOG_FILE ===
+ * responses (_lista de TRIAL_RESPONSE_)
+
+=== TRIAL_RESPONSE ===
+ * TRIAL (el TRIAL original al que se da respuesta, mismo formato del GAME_FILE)
+ * RESPONSE (una lista RESPONSE, ver mas abajo)
+
+=== RESPONSE ===
+ * correct (_numero entero 1 o 0_)
+   * El resultado del trial, 1 si gano, 0 si repitio fichas.
+ * choices (_lista de CHOICE_)
+   * La lista de las elecciones que hizo el jugador
+
+=== CHOICE ===
+ * card_id(_numero entero_)
+   * es el indice de esta ficha en el listado de fichas del TRIAL, contando desde 0, sirviendo asi como identificador univoco de esta ficha para este trial.
+ * last_mouse (_\[mouse x, mouse y\]_)
+   * la ultima posicion del mouse, en una lista de [x,y] con precision de al menos 2 decimales.
+ * moves (_lista de MOUSEMOVE_)
+   * Una lista de todos los movimientos que se hicieron con el mouse durante el trial.
+ * positions (_lista de CARD_POS_)
+   * La lista 
+  
 * el numero de ficha elegida (con respecto a como estan en el TRIAL)
 * la ultima posicion del mouse, en una lista [x,y]
 * una lista de objetos MOUSEMOVE, representando los distintos
