--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -17,21 +17,21 @@ En la definicion del formato.
 == Formato del GAME_FILE de memoria ==
 
 === En el GAME_FILE de un juego de memoria especificamos: ===
- * nivel_inicial (_numero entero_):
+ * nivel_inicial (_numero natural_):
    * Es el nivel en el que se empieza jugando.
    * *tiene* que haber al menos un trial de este nivel.
- * perdidas (_numero entero_):
+ * perdidas (_numero natural_):
    * La cantidad de veces consecutivas que uno debe perder antes de disminuir el nivel.
- * victorias (_numero entero_):
+ * victorias (_numero natural_):
    * La cantidad de veces consecutivas que uno debe ganar antes de aumentar el nivel.
- * numero_de_trials (_numero entero_):
+ * numero_de_trials (_numero natural_):
    * La cantidad de trials a jugar, luego de jugar esta cantidad, el juego termina.
  * trials (_lista de TRIAL_):
    * La lista de TRIAL disponibles para el juego.
    * Cuando el juego necesita un trial de un nivel en particular, elige al azar entre todos los TRIAL que tienen ese nivel.
 
 === Un TRIAL es una lista con ===
- * nivel (_numero entero_):
+ * nivel (_numero natural_):
    * El nivel de dificultad del trial.
  * agrupacion (_numero entero de 0 a 7 inclusive_):
    * 0 significa que no hay agrupamiento.
@@ -138,38 +138,37 @@ Una vez guardado el log crudo, se puede parsear para generar un LOG_FILE, tambie
  * correct (_numero entero 1 o 0_)
    * El resultado del trial, 1 si gano, 0 si repitio fichas.
  * choices (_lista de CHOICE_)
-   * La lista de las elecciones que hizo el jugador
+   * La lista de etapas en las que el jugador elige una ficha.
 
 === CHOICE ===
  * card_id(_numero entero_)
-   * es el indice de esta ficha en el listado de fichas del TRIAL, contando desde 0, sirviendo asi como identificador univoco de esta ficha para este trial.
+   * La ficha elegida en esta etapa, el valor es el indice de la ficha en el listado de fichas del TRIAL, contando desde 0.
  * last_mouse (_\[mouse x, mouse y\]_)
    * la ultima posicion del mouse, en una lista de [x,y] con precision de al menos 2 decimales.
  * moves (_lista de MOUSEMOVE_)
-   * Una lista de todos los movimientos que se hicieron con el mouse durante el trial.
+   * Una lista de todos los movimientos que se hicieron con el mouse durante esta etapa.
  * positions (_lista de CARD_POS_)
-   * La lista 
-  
-* el numero de ficha elegida (con respecto a como estan en el TRIAL)
-* la ultima posicion del mouse, en una lista [x,y]
-* una lista de objetos MOUSEMOVE, representando los distintos
-movimientos del mouse hasta elegir una ficha.
-* una lista de las posiciones de cada ficha (los llamamos CARD_POS)
-...cada MOUSEMOVE tiene:
-* la posicion x de ese movimiento.
-* la posicion y de ese movimiento
-* los milisegundos desde el inicio del juego
-... y cada CARD_POS tiene:
-* la posicion x de la ficha
-* la posicion y de la ficha
+   * La lista de posiciones de cada ficha para esta etapa.
 
-(ahora, en resumen)
+=== MOUSEMOVE ===
+ * x (_numero, con minimo de 2 decimales_)
+   * la posicion x de ese movimiento.
+ * y (_numero, con minimo de 2 decimales_)
+   * la posicion y de ese movimiento
+ * time
+   * los milisegundos desde el inicio del juego en los que ocurrio el movimiento
+
+=== CARD_POS ===
+ * x(_numero entero_):
+   * la posicion x de la ficha
+ * y(_numero entero_)
+   * la posicion y de la ficha
+
+=== Notacion corta de un GAME_LOG de memoria ===
+
 GAME_LOG = [TRIAL_RESPONSE, TRIAL_RESPONSE, ...]
 TRIAL_RESPONSE = [TRIAL, RESPONSE]
-RESPONSE = [result, [CHOICE, CHOICE, ...]]
-CHOICE = [card_id,
-          [last_mouse_x, last_mouse_y],
-          [MOUSEMOVE, MOUSEMOVE, ...],
-          [CARD_POS, CARD_POS, ...]]
+RESPONSE = [correct, [CHOICE, CHOICE, ...]]
+CHOICE = [card_id, [last_mouse_x, last_mouse_y], [MOUSEMOVE, MOUSEMOVE, ...], [CARD_POS, CARD_POS, ...]]
 MOUSEMOVE = [x,y,time]
 CARD_POS = [x,y]
