--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -157,7 +157,7 @@ Una vez guardado el log crudo, se puede parsear para generar un LOG_FILE, tambie
    * la posicion x de ese movimiento.
  * y (_numero, con minimo de 2 decimales_)
    * la posicion y de ese movimiento
- * time
+ * time (_numero natural_)
    * los milisegundos desde el inicio del juego en los que ocurrio el movimiento
 
 === CARD_POS ===
@@ -174,4 +174,137 @@ RESPONSE = [correct, [CHOICE, CHOICE, ...]]
 CHOICE = [card_id, [last_mouse_x, last_mouse_y], [MOUSEMOVE, MOUSEMOVE, ...], [CARD_POS, CARD_POS, ...]]
 MOUSEMOVE = [x,y,time]
 CARD_POS = [x,y]
+}}}
+
+= Planning =
+
+== Formato del GAME_FILE de planning ==
+
+=== En el GAME_FILE de un juego de planning especificamos: ===
+ * nivel_inicial (_numero natural_):
+   * Es el nivel en el que se empieza jugando.
+   * *tiene* que haber al menos un trial de este nivel.
+ * perdidas (_numero natural_):
+   * La cantidad de veces consecutivas que uno debe perder antes de disminuir el nivel.
+ * victorias (_numero natural_):
+   * La cantidad de veces consecutivas que uno debe ganar antes de aumentar el nivel.
+ * numero_de_trials (_numero natural_):
+   * La cantidad de trials a jugar, luego de jugar esta cantidad, el juego termina.
+ * trials (_lista de TRIAL_):
+   * La lista de TRIAL disponibles para el juego.
+   * Cuando el juego necesita un trial de un nivel en particular, elige al azar entre todos los TRIAL que tienen ese nivel.
+
+=== TRIAL ===
+ * nivel (_numero natural_):
+   * El nivel de dificultad del trial.
+ * max_moves (_numero natural_)
+   * La cantidad de movidas maximas permitidas para el trial, luego de esa cantidad, el trial se da por perdido. Para este fin no se considera 'movida' si el jugador comienza a arrastrar un personaje y se arrepiente soltandolo otra vez en la misma casa.
+ 
+ * topleft_house (_numero entero de 1 a 4_)
+   * El id de casa que deberia estar posicionada arriba a la izquierda.
+   * Los id de casa son:
+     # Casa Ana
+     # Casa Pancho
+     # Casa Nubis
+     # Lugar Vacio
+
+ * topright_house (_numero entero de 1 a 4_)
+   * El id de casa que deberia estar posicionada arriba a la derecha.
+   * ver ids de casa en topleft_house
+
+ * bottomleft_house (_numero entero de 1 a 4_)
+   * El id de casa que deberia estar posicionada abajo a la izquierda.
+   * ver ids de casa en topleft_house
+
+ * bottomright_house (_numero entero de 1 a 4_)
+   * El id de casa que deberia estar posicionada abajo a la derecha.
+   * ver ids de casa en topleft_house
+
+ * topleft_char (_numero entero de 0 a 3_)
+   * El id de personaje que deberia empezar posicionado arriba a la izquierda.
+   * 0 significa que el lugar queda vacio.
+   * Los id de personaje son:
+     # Ana
+     # Pancho
+     # Nubis
+
+ * topright_char (_numero entero de 0 a 3_)
+   * El id de personaje que deberia empezar posicionado arriba a la derecha.
+   * 0 significa que el lugar queda vacio.
+   * ver ids de personaje en topleft_char
+
+ * bottomleft_char (_numero entero de 0 a 3_)
+   * El id de personaje que deberia empezar posicionado abajo a la izquierda.
+   * 0 significa que el lugar queda vacio.
+   * ver ids de personaje en topleft_char
+
+ * bottomright_char (_numero entero de 0 a 3_)
+   * El id de personaje que deberia empezar posicionado abajo a la derecha.
+   * 0 significa que el lugar queda vacio.
+   * ver ids de personaje en topleft_char
+
+=== Notacion corta de un GAME_FILE de planning ===
+{{{
+GAME_FILE = [nivel_inicial, perdidas, victorias, [TRIAL, TRIAL, ..]]
+TRIAL = [nivel, max_moves, topleft_house, topright_house, bottomleft_house, bottomright_house, topleft_char, topright_char, bottomleft_char, bottomright_char]
+}}}
+
+== Formato del LOG_FILE de planning ==
+Una vez guardado el log crudo, se puede parsear para generar un LOG_FILE, tambien en formato de listas anidadas. En el log simplemente unimos cada TRIAL con la respuesta correspondiente (RESPONSE). 
+ 
+=== LOG_FILE ===
+ * responses (_lista de TRIAL_RESPONSE_)
+
+=== TRIAL_RESPONSE ===
+ * TRIAL (el TRIAL original al que se da respuesta, mismo formato del GAME_FILE)
+ * RESPONSE (una lista RESPONSE, ver mas abajo)
+
+=== RESPONSE ===
+ * correct (_numero entero 1 o 0_)
+   * si el trial fue terminado correctamente (o sea, lo hizo en menos de max_moves)
+ * move_count (_numero natural_)
+   * cantidad de movidas en las que resolvio el trial
+ * movidas (_lista de CHAR_DRAG_)
+   * Son las movidas completadas o canceladas que se hicieron durante el trial.
+
+=== CHAR_DRAG ===
+ * char_id (_numero entero de 1 a 3_)
+   * el id del personaje siendo arrastrado
+   * Los id de personaje son (como en el GAME_FILE)
+     # Ana
+     # Pancho
+     # Nubis
+ 
+ * from (_numero entero de 1 a 4_)
+   * el id de casa desde donde fue arrastrado
+   * Los id de casa son: (como en el GAME_FILE)
+     # Casa Ana
+     # Casa Pancho
+     # Casa Nubis
+     # Lugar Vacio
+   
+ * to (_numero entero de 1 a 4_)
+   * el id de casa hacia donde fue arrastrado
+   * si es igual que _from_, entonces el movimiento fue cancelado
+ 
+ * movimientos (_lista de MOUSE_MOVE_)
+   * los distintos movimientos del mouse mientras se arrastraba la ficha
+
+=== MOUSE_MOVE ===
+ * x (_numero con al menos 2 decimales_)
+   * la posicion x del mouse en ese movimiento
+
+ * y (_numero con al menos 2 decimales_)
+   * la posicion y del mouse en ese movimiento
+
+ * time (_numero natural_)
+  * Los milisegundos desde el inicio del juego al momento de ese movimiento
+  
+=== Notacion corta de un LOG_FILE de planning ===
+{{{
+LOG_FILE = [TRIAL_RESPONSE, TRIAL_RESPONSE, ...]
+TRIAL_RESPONSE = [TRIAL, RESPONSE]
+RESPONSE = [correct, move_count, [CHAR_DRAG, CHAR_DRAG, ...]]
+CHAR_DRAG = [char_id, from, to, [MOUSE_MOVE, MOUSE_MOVE, ...]]
+MOUSE_MOVE = [x,y,time]
 }}}
